force-app/main/default/objects/DocumentListAssignment__c/DocumentListAssignment__c.object-meta.xml
<CustomObject>
    <description>Used to assign records to document lists</description>
    <label>Document List Assignment</label>
    <nameField>
        <displayFormat>DLA-{00000}</displayFormat>
        <label>Document List Assignement Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Document List Assignments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>