force-app/main/default/objects/DocumentListAssignment__c/fields/Criteria__c.field-meta.xml
<CustomField>
    <fullName>Criteria__c</fullName>
    <description>Assign the document bundle only when this criteria evaluates to TRUE. Example : BillingCountry = &apos;Italy&apos;</description>
    <inlineHelpText>Assign the document bundle only when this criteria evaluates to TRUE. Example : BillingCountry = &apos;Italy&apos;</inlineHelpText>
    <label>Criteria</label>
    <length>255</length>
    <type>Text</type>
</CustomField>