force-app/main/default/objects/DocumentListAssignment__c/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Indicates if the assignment is active.</description>
    <inlineHelpText>Indicates if the assignment is active.</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>